--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite build; vite preview --host"
+"build": "vite build",
+"preview": "vite preview --host"
+
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
